fixed mobile overflow issue started portfolio page mockup

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@ body {
     transition: background-color 400ms ease-in-out;
     user-select: none;
 }
+body,
+html {
+    position: sticky;
+    overflow: hidden;
+    font-size: 62.5%;
+}
 /* #root {
     width: 100vw;
     height: 100vh;
