--- a/src/CSS/resets.css
+++ b/src/CSS/resets.css
@@ -17,12 +17,11 @@
 
 body,
 html {
-  height: 100%;
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 /* Remove default margin & padding*/
 
-* {
+* { 
     margin: 0;
     padding: 0;
 }
